--- a/scss/style.css
+++ b/scss/style.css
@@ -4,4 +4,18 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.board {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  position: relative;
+  text-align: center;
+  background-color: red;
+  width: 50vw;
+  margin: auto;
+}
 /*# sourceMappingURL=style.css.map */
