--- a/scss/style.css
+++ b/scss/style.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+h1 {
+  text-align: center;
+}
+
 .board {
   display: -ms-grid;
   display: grid;
@@ -13,9 +17,13 @@
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
   position: relative;
-  text-align: center;
   background-color: red;
   width: 50vw;
+  height: 60vh;
   margin: auto;
+}
+
+footer {
+  position: absolute;
 }
 /*# sourceMappingURL=style.css.map */
