js: make a function to allow the user to play again

--- a/scss/style.css
+++ b/scss/style.css
@@ -66,4 +66,10 @@ h1 {
 footer {
   position: absolute;
 }
+
+button {
+  padding: 20px;
+  cursor: pointer;
+  border: 1px solid black;
+}
 /*# sourceMappingURL=style.css.map */
