--- a/scss/style.css
+++ b/scss/style.css
@@ -11,6 +11,7 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 2.3rem;
 }
 
 .board {
@@ -71,5 +72,33 @@ button {
   padding: 20px;
   cursor: pointer;
   border: 1px solid black;
+}
+
+.score {
+  font-size: 1.5rem;
+}
+
+footer p {
+  width: 100vw;
+  text-align: center;
+}
+
+.msg {
+  color: green;
+  font-size: 2rem;
+  font-weight: bold;
+  position: relative;
+}
+
+.fas {
+  font-size: 10rem;
+  width: 100%;
+  text-align: center;
+}
+
+.far {
+  font-size: 10rem;
+  width: 100%;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
