--- a/scss/style.css
+++ b/scss/style.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz@8..144&display=swap");
 * {
   padding: 0;
   border: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Roboto Flex", sans-serif;
 }
 
 body {
@@ -71,7 +73,14 @@ footer {
 button {
   padding: 20px;
   cursor: pointer;
-  border: 1px solid black;
+  border: none;
+  border-radius: 15px;
+  font-size: 1.2rem;
+}
+
+button:hover {
+  background-color: black;
+  color: white;
 }
 
 .score {
